Improve error feedbacks and add a share btn

--- a/gdscript/static/css/editor.css
+++ b/gdscript/static/css/editor.css
@@ -47,7 +47,11 @@ a {
 	padding: 5px;
 }
 
-#console button {
+.editor.result.error {
+    color: #dd4c65;
+}
+
+div.buttons {
 	position: absolute;
-	right: 10%;
+    right: 10%;
 }
