--- a/gdscript/templates/editor.html
+++ b/gdscript/templates/editor.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>GDScript Online</title>
+	<title>GDScript Playground</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	
@@ -15,11 +15,11 @@
 	
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@tumeo_">
-	<meta name="twitter:title" content="GDScript Online">
+	<meta name="twitter:title" content="GDScript Playground">
 	<meta name="twitter:description" content="A web implementation for the gdscript-cli wrapper.">
 
 	<meta property="og:type" content="profile">
-	<meta property="og:title" content="GDScript Online">
+	<meta property="og:title" content="GDScript Playground">
 	<meta property="og:url" content="https://gd.tumeo.space/">
 	<meta property="profile:first_name" content="William">
 	<meta property="profile:last_name" content="Tumeo">
@@ -29,7 +29,7 @@
 
 <body>
 
-	<h1><a href="/">GDScript Online</a> <span id="version"><a href="https://godotengine.org/article/release-candidate-godot-3-1-rc-1" target="_blank">3.1-rc1</a></span></h1>
+	<h1><a href="/">GDScript Playground</a> <span id="version"><a href="https://godotengine.org/" target="_blank">3.1-stable</a></span></h1>
 
 	<form action="/run.gd" method="post">
 		{% csrf_token %}
@@ -40,15 +40,15 @@
 			
 			<div id="console">
 				<textarea class="editor result" name="result" placeholder="Output" readonly id="" cols="34" rows="12"></textarea>
-				<button type="submit">Run script</button>
+				<div class="buttons">
+    				<button class="share" type="button">Share</button>
+    				<button class="run-script" type="submit">Run script</button>
+				</div>
 			</div>
 		</ul>
 	</form>
 
-	<script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="/static/js/monaco/min/vs/loader.js"></script>
 	<script src="/static/js/tokenizer.js"></script>
 	<script src="/static/js/lz-string.min.js"></script>
