--- a/gdscript/templates/editor.html
+++ b/gdscript/templates/editor.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
+<!-- Taxation is theft :) -->
+
 <html>
 
 <head>
@@ -47,6 +49,8 @@
 			</div>
 		</ul>
 	</form>
+	
+	<small><a target="_blank" href="https://github.com/williamd1k0/gdscript-online">＜Source-Code＞</a></small>
 
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="/static/js/monaco/min/vs/loader.js"></script>
