Add new editors

--- a/gdscript/templates/head.html
+++ b/gdscript/templates/head.html
@@ -21,12 +21,18 @@
 	<meta property="profile:first_name" content="William">
 	<meta property="profile:last_name" content="Tumeo">
 	
-	<link rel="stylesheet" type="text/css" href="/static/css/editor.css_">
+	<link rel="stylesheet" type="text/css" href="/static/css/playground.css">
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     
     <script src="/static/codemirror/lib/codemirror.js"></script>
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="/static/codemirror/theme/dracula.css">
+    <link rel="stylesheet" href="/static/codemirror/theme/night.css">
     <script src="/static/codemirror/mode/python/python.js"></script>
+    
+    <script src="/static/js/lz-string.min.js"></script>
+    <script src="/static/js/scripteditor.js"></script>
+    <script src="/static/js/scriptoutput.js"></script>
 </head>
