--- a/gdscript/templates/modal.html
+++ b/gdscript/templates/modal.html
@@ -10,8 +10,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <a href="https://gd.tumeo.space/KYDwLsB2AmDOAEA5A9tYAoTAzArpAxvAPoBOwAhtAJ4AUAlAFzoCQADiQJaRg0BE-LAJIByaPABWOWGHgAbDgGtg8MMnhcIJccHwysyEvHLwAtshNQwAOhYB1ABbkZVZDmFl4ZLME6QA5ipq5AgAMlw4IAA06ghc8FjkutEA4ogAqgD0YZAR0SwGRggiAG7KZPiWslQq5EqQgfD45LLy-upgKenwrLJS8NkRNsz8vHToQA">
-https://gd.tumeo.space/KYDwLsB2AmDOAEA5A9tYAoTAzArpAxvAPoBOwAhtAJ4AUAlAFzoCQADiQJaRg0BE-LAJIByaPABWOWGHgAbDgGtg8MMnhcIJccHwysyEvHLwAtshNQwAOhYB1ABbkZVZDmFl4ZLME6QA5ipq5AgAMlw4IAA06ghc8FjkutEA4ogAqgD0YZAR0SwGRggiAG7KZPiWslQq5EqQgfD45LLy-upgKenwrLJS8NkRNsz8vHToQA
+        <a id="share-url" href="">
         </a>
       </div>
       <div class="modal-footer">
