Force margin in editor tabs

--- a/gdscript/templates/playground.html
+++ b/gdscript/templates/playground.html
@@ -20,6 +20,8 @@
             <li class="nav-item">
                 <a class="nav-link active" href="#" aria-disabled="false">Script</a>
             </li>
+            <li class="nav-item"><a class="nav-link disabled" href="#" aria-disabled="true"></a></li>
+            
             <li class="nav-item">
                 <form id="run-script" action="/run.gd" method="post">
                     <button class="share btn btn-outline-info" type="button" data-toggle="modal" data-target="#ShareModal">Share</button>
