Add gdscript mode based on python mode

--- a/gdscript/templates/navbar.html
+++ b/gdscript/templates/navbar.html
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto">
     
       <li class="nav-item">
-        <a class="nav-link" href="#">New</a>
+        <a id="new-script" class="nav-link" href="#">New</a>
       </li>
       
       <li class="nav-item dropdown">
