Add base for script examples

--- a/gdscript/templates/head.html
+++ b/gdscript/templates/head.html
@@ -35,4 +35,6 @@
     <script src="/static/js/lz-string.min.js"></script>
     <script src="/static/js/scripteditor.js"></script>
     <script src="/static/js/scriptoutput.js"></script>
+    <script src="/static/js/snippets.js"></script>
+
 </head>
