--- a/gdscript/templates/navbar.html
+++ b/gdscript/templates/navbar.html
@@ -16,8 +16,8 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Examples
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Hello World</a>
+        <div id="menu-snippets" class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <!-- <a class="dropdown-item" href="#hello">Hello World</a> -->
           <!-- <div class="dropdown-divider"></div> -->
         </div>
       </li>
