Some SEO updates

--- a/gdscript/templates/head.html
+++ b/gdscript/templates/head.html
@@ -2,24 +2,28 @@
 <head>
 	<title>GDScript Playground</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	
-	<meta charset="utf-8">
-	<meta name="description" content="A web implementation for the gdscript-cli wrapper.">
-	<meta name="robots" content="index, follow">
-	<meta name="author" content="William Tumeo">
-	
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@tumeo_">
-	<meta name="twitter:title" content="GDScript Playground">
-	<meta name="twitter:description" content="A web implementation for the gdscript-cli wrapper.">
+	<meta charset="utf-8" />
+	<meta name="description" content="Try a script right now! Desktop or mobile web browser." />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="William Tumeo" />
 
-	<meta property="og:type" content="profile">
-	<meta property="og:title" content="GDScript Playground">
-	<meta property="og:url" content="https://gd.tumeo.space/">
-	<meta property="profile:first_name" content="William">
-	<meta property="profile:last_name" content="Tumeo">
+	<meta property="og:type" content="profile" />
+	<meta property="og:title" content="GDScript Playground" />
+	<meta property="og:url" content="https://gd.tumeo.space/" />
+	<meta property="og:site_name" content="Tumeo Space" />
+	<meta property="profile:first_name" content="William" />
+	<meta property="profile:last_name" content="Tumeo" />
+	<meta property="og:image" content="/static/img/gdscript.png" />
+	
+	<meta name="twitter:card" content="app" />
+	<meta name="twitter:site" content="@tumeo_" />
+	<meta name="twitter:creator" content="@tumeo_" />
+	<meta name="twitter:title" content="GDScript Playground" />
+	<meta name="twitter:description" content="Try a script right now! Desktop or mobile web browser." />
+	<meta name=”twitter:image” content="/static/img/gdscript.png" />
 	
 	<link rel="stylesheet" type="text/css" href="/static/css/playground.css">
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
