Fix twitter card

--- a/gdscript/templates/head.html
+++ b/gdscript/templates/head.html
@@ -16,14 +16,14 @@
 	<meta property="og:site_name" content="Tumeo Space" />
 	<meta property="profile:first_name" content="William" />
 	<meta property="profile:last_name" content="Tumeo" />
-	<meta property="og:image" content="/static/img/gdscript.png" />
+	<meta property="og:image" content="https://gd.tumeo.space/static/img/gdscript.png" />
 	
-	<meta name="twitter:card" content="app" />
-	<meta name="twitter:site" content="@tumeo_" />
-	<meta name="twitter:creator" content="@tumeo_" />
-	<meta name="twitter:title" content="GDScript Playground" />
-	<meta name="twitter:description" content="Try a script right now! Desktop or mobile web browser." />
-	<meta name=”twitter:image” content="/static/img/gdscript.png" />
+	<meta property="twitter:card" content="summary" />
+	<meta property="twitter:site" content="@tumeo_" />
+	<meta property="twitter:creator" content="@tumeo_" />
+	<meta property="twitter:text:title" content="GDScript Playground" />
+	<meta property="twitter:description" content="Try a script right now! Desktop or mobile web browser." />
+	<meta property="twitter:image" content="https://gd.tumeo.space/static/img/gdscript.png" />
 	
 	<link rel="stylesheet" type="text/css" href="/static/css/playground.css">
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
