Improve page theme

--- a/gdscript/templates/modal.html
+++ b/gdscript/templates/modal.html
@@ -1,7 +1,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="ShareModal" tabindex="-1" role="dialog" aria-labelledby="ShareModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable" role="document">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="ShareModalLabel">Share</h5>
@@ -9,9 +9,8 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <a id="share-url" href="">
-        </a>
+      <div class="modal-body break-word">
+        <a id="share-url" href=""></a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
