--- a/gdscript/templates/navbar.html
+++ b/gdscript/templates/navbar.html
@@ -16,7 +16,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Examples
         </a>
-        <div id="menu-snippets" class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div id="menu-snippets" class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           <!-- <a class="dropdown-item" href="#hello">Hello World</a> -->
           <!-- <div class="dropdown-divider"></div> -->
         </div>
