--- a/gdscript/templates/playground.html
+++ b/gdscript/templates/playground.html
@@ -18,7 +18,7 @@
     <div class="col-sm">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="#" aria-disabled="false">Script</a>
+                <a class="nav-link active bg-dark" href="#" aria-disabled="false">Script</a>
             </li>
             <li class="nav-item"><a class="nav-link disabled" href="#" aria-disabled="true"></a></li>
             
@@ -40,7 +40,7 @@
     <div class="col-sm">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="#" aria-disabled="false">Output</a>
+                <a class="nav-link active bg-dark" href="#" aria-disabled="false">Output</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#" aria-disabled="true">Godot Engine v3.1.2-stable</a>
@@ -53,7 +53,7 @@
 	   </div>
     </div>
   
-	<small><a target="_blank" href="https://github.com/williamd1k0/gdscript-online">＜Source-Code＞</a></small>
+	<small><a target="_blank" href="https://github.com/williamd1k0/gdscript-playground">＜Source-Code＞</a></small>
   </div>
 </div>
 
