--- a/gdscript/templates/head.html
+++ b/gdscript/templates/head.html
@@ -1,6 +1,6 @@
 
 <head>
-	<title>GDScript Playground</title>
+	<title>GDScript Playground 🤖</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
