Add a keymap to run scripts (Ctrl+Enter) [#8]

--- a/gdscript/templates/playground.html
+++ b/gdscript/templates/playground.html
@@ -28,7 +28,7 @@
                     {% csrf_token %}
                     <input type="hidden" name="script">
                     <input type="hidden" name="mode" value="script">
-                    <button class="run-script btn btn-outline-success" type="submit" >Run</button>
+                    <button class="run-script btn btn-outline-success" type="submit" title="Run script [Ctrl+Enter]">Run</button>
                 </form>
             </li>
         </ul>
