Add snippets as yaml data

--- a/web/src/js/scripteditor.js.j2
+++ b/web/src/js/scripteditor.js.j2
@@ -1,18 +1,6 @@
 
 var EDITOR;
-var SAMPLE = [
-	'extends Node',
-	'',
-	'# class member variables go here, for example:',
-	'# var a = 2',
-	'# var b = "textvar"',
-	'',
-	'func _ready():',
-	'	# Called every time the node is added to the scene.',
-	'	# Initialization here',
-	'	pass',
-	''
-].join('\n');
+var SAMPLE = {{ data.default_code.code | tojson }};
 
 function show_error(line) {
 	EDITOR.markText({line:line, ch:0}, {line:line, ch:null}, {
