--- a/web/layouts/base.html.j2
+++ b/web/layouts/base.html.j2
@@ -4,6 +4,7 @@
 <head>
 {% block head %}
 	<title>{{ site.title }}</title>
+	<link rel="icon" href="{{ "{}{}".format(site.baseurl, "img/favicon.png") }}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
