--- a/web/layouts/app.html.j2
+++ b/web/layouts/app.html.j2
@@ -5,6 +5,7 @@
 	<script src="lib/jquery.min.js"></script>
 	
 	<link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css">
+	<script src="lib/bootstrap/popper.min.js"></script>
 	<script src="lib/bootstrap/bootstrap.min.js"></script>
 	
 	<link rel="stylesheet" href="lib/codemirror/lib/codemirror.css">
