--- a/web/includes/navbar.html.j2
+++ b/web/includes/navbar.html.j2
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<a class="navbar-brand" href="#">GDScript Playground</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -9,10 +9,17 @@
 				<a id="new-script" class="nav-link" href="#">New</a>
 			</li>
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<a class="nav-link dropdown-toggle" href="#" id="snippets-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				Examples
 				</a>
-				<div id="menu-snippets" class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+				<div id="menu-snippets" class="dropdown-menu bg-dark" aria-labelledby="snippets-dropdown">
+				</div>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="versions-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<span id="godot-version">Fetching versions...</span>
+				</a>
+				<div id="menu-versions" class="dropdown-menu bg-dark" aria-labelledby="versions-dropdown">
 				</div>
 			</li>
 		</ul>
