Fix indentation bug by using spaces instead of tabs (closes #23)

--- a/web/src/js/scripteditor.js.j2
+++ b/web/src/js/scripteditor.js.j2
@@ -15,7 +15,7 @@ $(document).ready(function() {
 	EDITOR = CodeMirror(document.querySelector('#editor'), {
 		lineNumbers: true,
 		indentUnit: 4,
-		indentWithTabs: true,
+		indentWithTabs: false,
 		scrollbarStyle: 'null',
 		theme: 'dracula',
 		mode: "gdscript",
