Add godot related ads

--- a/web/src/index.html.j2
+++ b/web/src/index.html.j2
@@ -7,6 +7,6 @@
 
 	<div class="main-container">
 		{% include 'includes/editors.html.j2' %}
-		{% include 'includes/adsense.html.j2' %}
+		{% include 'includes/ads.html.j2' %}
 	</div>
 {% endblock %}
