--- a/web/src/css/playground.css
+++ b/web/src/css/playground.css
@@ -64,3 +64,10 @@ small a {
 .ads {
     margin-top: 3em;
 }
+
+@media only screen
+and (max-width : 520px) {
+    .itch-ads {
+        width: 80%;
+    }
+}
