Update og image

--- a/web/layouts/base.html.j2
+++ b/web/layouts/base.html.j2
@@ -20,14 +20,14 @@
 	<meta property="og:site_name" content="{{ site.sitename }}" />
 	<meta property="profile:first_name" content="{{ site.author.split(" ")[0] }}" />
 	<meta property="profile:last_name" content="{{ site.author.split(" ")[-1] }}" />
-	<meta property="og:image" content="{{ "{}{}".format(site.siteurl, "img/gdscript.png") }}" />
+	<meta property="og:image" content="{{ "{}{}".format(site.siteurl, "img/godette.png") }}" />
 	
 	<meta property="twitter:card" content="summary" />
 	<meta property="twitter:site" content="{{ site.twitter }}" />
 	<meta property="twitter:creator" content="{{ site.twitter }}" />
 	<meta property="twitter:text:title" content="{{ site.title }}" />
 	<meta property="twitter:description" content="{{ site.description }}" />
-	<meta property="twitter:image" content="{{ "{}{}".format(site.siteurl, "img/gdscript.png") }}" />
+	<meta property="twitter:image" content="{{ "{}{}".format(site.siteurl, "img/godette.png") }}" />
 	<script>
 		window.goatcounter = {
 			path: function() {
