Fix goat counter path for shared code

--- a/web/layouts/base.html.j2
+++ b/web/layouts/base.html.j2
@@ -31,7 +31,7 @@
 	<script>
 		window.goatcounter = {
 			path: function() {
-				return location.pathname + (location.search.length > 1 ? 'sharedcode' : ''),
+				return location.pathname + (location.search.length > 1 ? 'sharedcode' : '');
 			},
 		}
 	</script>
