Add base for external script

--- a/web/layouts/app.html.j2
+++ b/web/layouts/app.html.j2
@@ -16,6 +16,7 @@
 	<script src="lib/lz-string.min.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/playground.css">
+	<script src="js/scriptimport.js"></script>
 	<script src="js/scripteditor.js"></script>
 	<script src="js/scriptoutput.js"></script>
 	<script src="js/snippets.js"></script>
