Update ads configs

--- a/web/includes/ads.html.j2
+++ b/web/includes/ads.html.j2
@@ -1,9 +1,13 @@
 {% if site.ads_enabled %}
 <!-- Sorry I need to pay my ̶t̶a̶x̶e̶s̶  bills... -->
 <div align="center" class="ads">
+	{% if site.custom_ads_enabled %}
 	<iframe class="itch-ads" frameborder="0" src="https://itch.io/embed/1773067?linkback=true&amp;dark=true" width="552" height="167">
 		<a href="https://pigdev.itch.io/platformer-essentials">Platformer Essential Recipes by Pigdev</a>
 	</iframe>
+	{% endif %}
+
+	{% if site.adsbygoogle_enabled %}
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9962263199785319"
 	 crossorigin="anonymous"></script>
@@ -16,5 +20,6 @@
 	<script>
 		(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
+	{% endif %}
 </div>
 {% endif %}
