--- a/web/src/js/scriptimport.js.j2
+++ b/web/src/js/scriptimport.js.j2
@@ -3,6 +3,9 @@ function get_external_script_source() {
 	if (location.search.match(/rentry=(.+)&?/)) {
 		return "rentry";
 	}
+	if (location.search.match(/gist=(.+)&?/)) {
+		return "gist";
+	}
 	if (location.search.length > 2) {
 		return "lz";
 	}
@@ -28,6 +31,19 @@ function fetch_external_script() {
 				url: "{{ site.function_url + site.rentry_function.url }}",
 				headers: {
 					'X-Require-Whisk-Auth': {{ site.rentry_function.token | tojson }},
+				}
+			}, data, function(result) {
+				EDITOR.setValue(result);
+			});
+		break;
+		case "gist":
+			var data = {
+				"id": location.search.match(/gist=(.+)&?/)[1]
+			};
+			$.get({
+				url: "{{ site.function_url + site.gist_function.url }}",
+				headers: {
+					'X-Require-Whisk-Auth': {{ site.gist_function.token | tojson }},
 				}
 			}, data, function(result) {
 				EDITOR.setValue(result);
